--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -420,7 +420,7 @@
         margin: 0 15em 5em 14em;
         border-radius: 20px;
         width: fit-content;
-        height:120vh;
+        height:fit-content;
         background-color: transparent;
         border: 1px solid lightslategray;
         
@@ -437,6 +437,6 @@
     }
 
     #login-success, #login-error{
-        padding: 10em 15em 0 0;
+        padding: 5em 15em 0 0;
     }
 }
