--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -429,7 +429,7 @@
     #login-container{
         background-repeat: repeat;
         padding: 3em 15em;
-        height: 100%;
+        height: 120vh;
     }
 
     #login-to-register-form{
