imput box shadow

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -439,4 +439,8 @@
     #login-success, #login-error{
         padding: 0 15em 0 0;
     }
+
+    .login-input{
+        box-shadow: #3B3C36;
+    }
 }
