--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -428,6 +428,7 @@
 
     #login-container{
         background-repeat: repeat;
+        background-attachment: fixed;
         padding: 3em 15em;
         height: 120vh;
     }
