--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -408,7 +408,7 @@
     }
 
     #register-div{
-        margin-left: .2em;
+        margin: 0 10em;
         background-color: transparent;
     }
 
