--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -403,7 +403,7 @@
 
     #register-container{
         width: 100vw;
-        height: 100%;
+        height: 130vh;
         background-repeat: repeat;
         padding: 0 5em;
     }
